--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         
     </head>
     <body>
+        <h1>Connected</h1>
             
         <script src="assets/js/jquery.min.js"></script>
         <script src="assets/js/custom.js"></script>
