--- a/index.html
+++ b/index.html
@@ -1,32 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-       <title><?php echo $prabhat['TITLE'];?> | <?php echo $prabhat['DOMAINNAME'];?></title>
-        <meta http-equiv="Content-Type" content="text/php; charset=utf-8" />
-        <meta name='subtitle' content='<?php echo $prabhat['SUBTITLE'];?>'/>
-        <meta name='subject' content='<?php echo $prabhat['SUBJECT'];?>'/>
-        <meta name="description" content="<?php echo $prabhat['DESCRIPTION'];?>"/>
-        <meta name="keywords" content="<?php echo $prabhat['KEYWORDS'];?>"/>
-        <meta name='target' content='all'/>
-        <meta name='HandheldFriendly' content='True'/>
-        <meta name='MobileOptimized' content='320'/>
-        <meta name="robots" content="index, follow"/>
-        <meta name="revisit-after" content="30 days"/>
-        <meta name="copyright" content="<?php echo $prabhat['DOMAINNAME'];?>"/>
-        <meta name="distribution" content="global"/>
-        <meta name="language" content="english"/> 
-        <meta name="rating" content="safe for kids"/>
-        <meta http-equiv="Cache-control" content="public"/>
-        <meta name='Classification' content='Business'/>
-        <meta http-equiv='Expires' content='0'/>
-        <meta http-equiv='Pragma' content='no-cache'/>
-        <meta http-equiv='Cache-Control' content='no-cache'/>
-        <meta http-equiv='imagetoolbar' content='no'/>
-        <meta http-equiv='x-dns-prefetch-control' content='off'/>
-        <meta name="viewport" content="initial-scale=1">
-        <link rel="shortcut icon" type="image/x-icon" href="../common_pages/images/favicon.ico"/>
-        <link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css" media="screen" />
-        <link rel="stylesheet" href="../common_pages/style.css" type="text/css" media="screen" />
+       <title><Free Recharge 2024></title>
         <style type="text/css">
             .adslot_1 { display:inline-block; width: 320px; height: 50px; }
             @media (max-width: 400px) 
