--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="google" value="notranslate">
     <meta property="og:type" content="Make your own wonderful Wishing greeting card" />
     <meta property="og:title" content="Wishing You Happy HAPPY INDEPENDENCE DAY 2018 | आपको  स्वतंत्रता दिवस 2018 की शुभकामनाएं" />
-    <meta property="og:url" content="https://www.happyindependenceday2018.ooo/" />
+    <meta property="og:url" content="https://free-recharge-2024.hicf.in/" />
     <meta property="og:description" content="CLICK HERE" />
     <meta property="og:site_name" content="Create Awesome wisheing Card" />
     <link rel="stylesheet" type="text/css" href="main.css">
@@ -564,7 +564,7 @@ h3 {
 <!----Countdown time Setting ---->
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("august 15, 2018 00:00:00").getTime();
+var countDownDate = new Date("august 15, 2024 00:00:00").getTime();
 
 // Update the count down every 01 second
 var x = setInterval(function() {
@@ -608,7 +608,7 @@ var x = setInterval(function() {
 <!---This Theme Edited and Designed By Milind Sahu----->
 <br></br>
 <center>
- <a class="footerbtn" href="whatsapp://send?text= *Happy Independence Day Send Personalized Message ✔* 👉👉👉 https://www.happyindependenceday2018.ooo/">
+ <a class="footerbtn" href="whatsapp://send?text= *Happy Independence Day Send Personalized Message ✔* 👉👉👉 https://free-recharge-2024.hicf.in/">
  <img width="22px" height="22px" src="https://3.bp.blogspot.com/-gsVZJB-p1h8/W0z6Ted79nI/AAAAAAAACqo/yKypWPVJC_MG6rXeAJZ1rL0sA0ug02cqwCLcBGAs/s1600/wp.png"/>  
  <b style="font-size: 26px;">Share on Whatsapp</b>  
  <img width="25px" height="25px" src="https://3.bp.blogspot.com/-gsVZJB-p1h8/W0z6Ted79nI/AAAAAAAACqo/yKypWPVJC_MG6rXeAJZ1rL0sA0ug02cqwCLcBGAs/s1600/wp.png"/></a>
